Sonar: Erstatter .collect(Collectors.toList()) med .toList() der det er mulig (#7455)